--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:create": "lerna create",
     "lerna:run": "lerna run --stream",
-    "start:api": "lerna run start --stream --scope @patxt/api"
+    "api:start": "lerna run start --stream --scope @patxt/api"
   }
 }
