--- a/packages/patxt-api/package.json
+++ b/packages/patxt-api/package.json
@@ -14,6 +14,7 @@
     "build": "lb-tsc",
     "build:watch": "lb-tsc --watch",
     "clean": "lb-clean dist *.tsbuildinfo",
+    "lb:controller:create": "lb4 controller",
     "lint": "npm run prettier:check && npm run eslint",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
@@ -29,7 +30,8 @@
     "docker:run": "docker run -p 3000:3000 -d patext",
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
-    "start": "node -r source-map-support/register .",
+    "start": "node -r dotenv/config -r source-map-support/register .",
+    "start:dev": "tsc-watch --onSuccess 'node --inspect -r dotenv/config -r source-map-support/register .'",
     "prepublishOnly": "npm run test"
   },
   "bugs": {
@@ -61,20 +63,24 @@
     "@loopback/repository": "^1.15.3",
     "@loopback/rest": "^1.22.0",
     "@loopback/rest-explorer": "^1.4.3",
-    "@loopback/service-proxy": "^1.3.10"
+    "@loopback/service-proxy": "^1.3.10",
+    "dotenv": "^8.2.0",
+    "libphonenumber-js": "^1.7.26",
+    "loopback-connector-mongodb": "^4.2.0"
   },
   "devDependencies": {
     "@loopback/build": "^2.0.15",
-    "source-map-support": "^0.5.13",
+    "@loopback/eslint-config": "^4.1.3",
     "@loopback/testlab": "^1.9.3",
     "@types/node": "^10.17.0",
-    "@typescript-eslint/parser": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@loopback/eslint-config": "^4.1.3",
+    "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-mocha": "^6.2.0",
+    "source-map-support": "^0.5.13",
+    "tsc-watch": "^4.0.0",
     "typescript": "~3.6.4"
   }
 }
