--- a/packages/patxt-api/package.json
+++ b/packages/patxt-api/package.json
@@ -64,6 +64,7 @@
     "@loopback/rest": "^1.22.0",
     "@loopback/rest-explorer": "^1.4.3",
     "@loopback/service-proxy": "^1.3.10",
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "libphonenumber-js": "^1.7.26",
     "loopback-connector-mongodb": "^4.2.0"
