--- a/packages/patxt-api/package.json
+++ b/packages/patxt-api/package.json
@@ -11,28 +11,8 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "lb-tsc",
-    "build:watch": "lb-tsc --watch",
-    "clean": "lb-clean dist *.tsbuildinfo",
-    "lb:controller:create": "lb4 controller",
-    "lint": "npm run prettier:check && npm run eslint",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
-    "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
-    "prettier:check": "npm run prettier:cli -- -l",
-    "prettier:fix": "npm run prettier:cli -- --write",
-    "eslint": "lb-eslint --report-unused-disable-directives .",
-    "eslint:fix": "npm run eslint -- --fix",
-    "pretest": "npm run clean && npm run build",
-    "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
-    "posttest": "npm run lint",
-    "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
-    "docker:build": "docker build -t patext .",
-    "docker:run": "docker run -p 3000:3000 -d patext",
-    "migrate": "node ./dist/migrate",
-    "prestart": "npm run build",
-    "start": "node -r dotenv/config -r source-map-support/register .",
-    "start:dev": "tsc-watch --onSuccess 'node --inspect -r dotenv/config -r source-map-support/register .'",
-    "prepublishOnly": "npm run test"
+    "start": "node .",
+    "start:dev": "nodemon -r dotenv/config ."
   },
   "bugs": {
     "url": "https://github.com/tinker-hub/patxt/issues"
@@ -56,32 +36,16 @@
     "access": "restricted"
   },
   "dependencies": {
-    "@loopback/boot": "^1.5.10",
-    "@loopback/context": "^1.23.4",
-    "@loopback/core": "^1.10.6",
-    "@loopback/openapi-v3": "^1.10.0",
-    "@loopback/repository": "^1.15.3",
-    "@loopback/rest": "^1.22.0",
-    "@loopback/rest-explorer": "^1.4.3",
-    "@loopback/service-proxy": "^1.3.10",
+    "aws-serverless-express": "^3.3.6",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "libphonenumber-js": "^1.7.26",
-    "loopback-connector-mongodb": "^4.2.0"
+    "mongoose": "^5.7.7",
+    "serverless-dotenv-plugin": "^2.1.1"
   },
   "devDependencies": {
-    "@loopback/build": "^2.0.15",
-    "@loopback/eslint-config": "^4.1.3",
-    "@loopback/testlab": "^1.9.3",
-    "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-eslint-plugin": "^2.1.0",
-    "eslint-plugin-mocha": "^6.2.0",
-    "source-map-support": "^0.5.13",
-    "tsc-watch": "^4.0.0",
-    "typescript": "~3.6.4"
+    "nodemon": "^1.19.4"
   }
 }
