--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:create": "lerna create",
     "lerna:run": "lerna run --stream",
+    "lerna:version": "lerna version",
     "api:start": "lerna run start --stream --scope @patxt/api",
     "api:start:dev": "lerna run start:dev --stream --scope @patxt/api"
   }
